<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.scray.breakthesilencev3.RegisterActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--<include-->
        <!--android:id="@+id/register_toolbar"-->
        <!--layout="@layout/app_bar_layout"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginEnd="0dp"-->
        <!--android:layout_marginStart="0dp"-->
        <!--android:layout_marginTop="0dp"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent" />-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/login_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/register_display_name"
                android:layout_marginTop="37dp"
                android:text="@string/create_a_new_account"
                android:textColor="@android:color/black"
                android:textSize="28sp"
                app:layout_constraintBottom_toTopOf="@+id/register_display_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/register_display_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="35dp"
                android:layout_below="@+id/login_label">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:hint="@string/display_name"
                    android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/error_display"
                android:layout_width="match_parent"
                android:layout_below="@+id/register_display_name"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="20dp"
                android:text=""
                android:textColor="@android:color/holo_red_dark"
                android:textSize="12sp"
                />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/error_display">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:textSize="20sp"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>
            <TextView
                android:id="@+id/error_email"
                android:layout_width="match_parent"
                android:layout_below="@+id/register_email"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="20dp"
                android:text=""
                android:textColor="@android:color/holo_red_dark"
                android:textSize="12sp"
                />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/reg_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/error_email"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="visible"
                tools:visibility="visible">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textSize="20sp" />
            </android.support.design.widget.TextInputLayout>
            <TextView
                android:id="@+id/error_password"
                android:layout_width="match_parent"
                android:layout_below="@+id/reg_password"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="20dp"
                android:text=""
                android:textColor="@android:color/holo_red_dark"
                android:textSize="12sp"
                />

            <Button
                android:id="@+id/reg_create_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/colorAccent"

                android:padding="15dp"
                android:textSize="20sp"
                android:text="@string/create_account"
                android:textColor="@android:color/white"
                android:layout_below="@+id/error_password" />
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
